[025-0.1.3]: Landscape styling tweaks >> Attempted to smooth out some of the styling issues with landscape mode on mobile phones.

--- a/stylesheets/1_coreStyle.css
+++ b/stylesheets/1_coreStyle.css
@@ -20,6 +20,8 @@ html{
   right: 0;
   bottom: 0;
   left: 0;
+
+  background-color:rgb(220, 220, 223);
 }
 
 body{
@@ -74,7 +76,69 @@ a{
 
 
 
+/* ===== Media Queries ===== */
 
+/* *** The default app is built for phones in portrait. *** */
+
+
+
+
+/* ===== Mobile Phones ===== */
+
+/* iPhone X (retina) Landscape */
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3)
+and (orientation: landscape) {
+  .projects, .challenges, .contact{
+    padding-top: 0rem;
+    padding-right: 1rem;
+    padding-bottom: 0rem;
+    padding-left: 1rem;
+  
+    margin-top: .5rem;
+    margin-right: .5rem;
+    margin-bottom: .5rem;
+    margin-left: .5rem;
+  }
+}
+
+/* ======================== */
+
+
+
+/* ===== Tablets ===== */
+
+/* iPad Mini + iPad (non retina) Portrait */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait)
+and (-webkit-min-device-pixel-ratio: 1)  { /* STYLES GO HERE */ }
+
+/* iPad Mini + iPad (non retina) Landscape */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape)
+and (-webkit-min-device-pixel-ratio: 1)  { /* STYLES GO HERE */}
+
+/* iPad (retina) Portrait */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait)
+and (-webkit-min-device-pixel-ratio: 2) { /* STYLES GO HERE */ }
+
+/* iPad (retina) Landscape */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape)
+and (-webkit-min-device-pixel-ratio: 2) { /* STYLES GO HERE */}
+
+/* ========================= */
 
 
 
