--- a/stylesheets/2_coreLayout.css
+++ b/stylesheets/2_coreLayout.css
@@ -44,7 +44,7 @@ and (orientation: landscape) {
       left: 0;
 
       display: grid;
-      grid-template-columns: 2fr 3fr;
+      grid-template-columns: 2fr 2.2fr;
       grid-template-rows: 1fr 1fr 1fr;
       grid-template-areas: 
       "intro projects"
