--- a/stylesheets/4_subStyle.css
+++ b/stylesheets/4_subStyle.css
@@ -81,6 +81,9 @@ It also controls the modals styling. */
     white-space: nowrap;
 }
 
+
+
+/* The picture backgrounds */
 .projects::after,.challenges::after,.contact::after{
     top: 0;
     bottom: 0;
@@ -90,19 +93,23 @@ It also controls the modals styling. */
     z-index: -1;
 }
 
+/*
+background-size -> this property decides how the image will fill the parent.
+background-position -> this pans the image around; can have multiple arguments.
+*/
 .projects::after{
-    opacity: 70%;
+    opacity: 50%;
     content: "";
     background-image: url("../assets/blueprint_1920x1050.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: right;
 }
 .challenges::after{
     opacity: 80%;
     content: "";
     background-image: url("../assets/software_1920x1277.jpg");
-    background-size: contain;
-    background-position: right;
+    /*background-size: cover;*/
+    background-position: top left;
 }
 .contact::after{
     opacity: 80%;
@@ -111,6 +118,9 @@ It also controls the modals styling. */
     background-size: cover;
     background-position: right;
 }
+
+
+
 
 .title{
     font-size: 2.8rem;
@@ -124,6 +134,8 @@ It also controls the modals styling. */
     font-style: italic;
     display: inline;
 }
+
+
 
 .projectsModal, .challengesModal, .contactModal{
     color: black;
@@ -176,23 +188,6 @@ It also controls the modals styling. */
 
 /* The default app is built for phones in portrait. */
 
-/*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) {  }
-
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) { 
-      .intro-grid{
-          margin-top: 25%;
-      }
- }
-
-/*Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) {  }
-
-/*Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) {  }
-
-/* ========================= */
 
 
 /* ===== Mobile Phones ===== */
@@ -203,8 +198,9 @@ and (min-device-width : 375px)
 and (max-device-width : 812px)
 and (-webkit-device-pixel-ratio : 3)
 and (orientation: landscape) { 
+    /* This centers the card vertically in landscape mode on mobile. */
     .intro-grid{
-        margin-top: 25%;
+        margin-top: 22%;
     }
 }
 
